# trustworthytimes

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  TODO.md  docsindex.html  example.news  index.html  justfile
.github/workflows/: build.yml  deploy.yaml  integration.yaml
docs/: 404.html  index.html
docs/css/: global.css
docs/news/: blank.html  catknife.html  catoven.html  other.html  (+4 more)
docsnews/: blank.html  catknife.html  example.html  other.html
news/: amongus.html  amongus.news  amonguscringe.html  amonguscringe.news  babycries.html  babycries.news  babycry.html  babycry.news  boughtbuckingham.html  boughtbuckingham.news  boughtpalace.html  boughtpalace.news  catknife.html  catknife.news  catoven.html  catoven.news  childrentreason.html  childrentreason.news  congresslaw.html  congresslaw.news  congressnice.html  curepiss.html  curepiss.news  example.news  example.test.news  firefighterassault.html  firefighterassault.news  firefighterbeat.html  firefighterbeat.news  getatme.html  grandmaclothes.html  grandmaclothes.news  grandmadress.html  grandmadress.news  insanedog.html  insanedog.news  insaneshirt.html  insaneshirt.news  jokeroffice.html  jokeroffice.news  (+46 more)
src/: compile.rs  lib.rs  main.rs  news.rs  statics.rs
styles/: article.css  article.scss  articles_list.css  articles_list.scss  global.css  global.scss  header.css  header.scss  scroller.css  scroller.scss  watermark.css  watermark.scss
template/: article.hbs  index.hbs
templates/: 404.hbs  article.hbs  articles_list.hbs  boilerplate.hbs  header.hbs  index.hbs  scroller.hbs  watermark.hbs
(+14 files in other folders)
