[package]
name = "newsmarkdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.5"
regex = "1.6.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
# sass-sys = "0.4.22"
