[package]
name = "trustworthytimes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grass = "0.11.2"
handlebars = "4.3.5"
lazy_static = "1.4.0"
regex = "1.6.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
unreact = "0.1.2"

[dev-dependencies]
just = "1.7.0"
